# nsmls

./: .gitignore  CUSTOMIZATION  CUSTOMIZATION.md  Makefile  NOTICE  README.md  nsmls2.py  org.rncbc.drumkv1.desktop  setup.cfg
data/: xinitrc_example
src/config/: config.def.py  config.py  nsmlsconfig.py
src/libnsmls/: libnsmls.py  nsmls2.py  nsmls_dataclass.py
src/nsmls/: __main__.py  main.py  nsmls.py  nsmls2.py
test/: test_set.py
